testing/tests/ui/macro-super.stderr
error: 'super' is not a valid name for a macro
 --> <source attribute>:1:3
  |
       1 | {%- macro super() -%}{%- endmacro -%}
         |   ^ close to this token
         |
 --> tests/ui/macro-super.rs:4:12
  |
4 | #[template(source = "{%- macro super() -%}{%- endmacro -%}", ext = "html")]
  |            ^^^^^^
